# leancrypto

./: .clang-format  .gitignore  .rustfmt.toml  CHANGES.md  LICENSE  README.debugging.md  README.fips.md  README.md  SECURITY.md  TODO  coding-guidelines.md  dkms.conf  leancrypto.spec  meson.build  meson_options.txt
aead/src/: aead_api.c  ascon.c  ascon_ascon.c  ascon_internal.h  ascon_keccak.c  ascon_lightweight.c  chacha20poly1305.c  cshake_crypt.c  gcm.c  hash_crypt.c  kmac_crypt.c  meson.build  symhmac.c  symkmac.c
aead/tests/: aes_gcm_fips_tester.c  aes_gcm_large_tester.c  aes_gcm_openssl_large_tester.c  aes_gcm_tester.c  ascon_crypt_iuf_test.c  ascon_crypt_large_test_128.c  ascon_crypt_large_test_128_c.c  ascon_crypt_large_test_128a.c  ascon_crypt_large_test_128a_c.c  ascon_crypt_test.c  ascon_crypt_wrong_algo.c  ascon_keccak_crypt_iuf_test.c  ascon_keccak_crypt_large_test_256.c  ascon_keccak_crypt_large_test_256_c.c  ascon_keccak_crypt_large_test_512.c  ascon_keccak_crypt_large_test_512_c.c  ascon_keccak_crypt_test.c  chacha20poly1305_large_tester.c  chacha20poly1305_tester.c  cshake_crypt_large_test.c  cshake_crypt_large_test_c.c  cshake_crypt_test.c  hash_crypt_large_test.c  hash_crypt_test.c  kmac_crypt_large_test.c  kmac_crypt_large_test_c.c  kmac_crypt_test.c  leancrypto_kernel_aead_ascon_tester.c  leancrypto_kernel_aes_gcm_tester.c  leancrypto_kernel_chacha20_poly1305_tester.c  meson.build  symhmac_large_test.c  symhmac_test.c  symkmac128_large_test.c  symkmac128_test.c  symkmac256_large_test.c  symkmac256_test.c  symkmac_large_test.c  symkmac_test.c
apps/src/: README.md  ascon128-sum.c  ascon128a-sum.c  ascon256-sum.c  authenticode_SpcIndirectDataContent_asn1  authenticode_SpcIndirectDataContent_asn1.c  authenticode_SpcIndirectDataContent_asn1.h  authenticode_SpcPeImageData_asn1  authenticode_SpcPeImageData_asn1.c  authenticode_SpcPeImageData_asn1.h  efivars.h  hasher_app.c  hasher_app.h  image.c  image.h  lc_pkcs7_generator.c  lc_pkcs7_generator_helper.c  lc_pkcs7_generator_helper.h  lc_x509_generator.c  lc_x509_generator_checker.c  lc_x509_generator_file_helper.c  lc_x509_generator_file_helper.h  lc_x509_generator_helper.c  lc_x509_generator_helper.h  lc_x509_generator_print.c  meson.build  sbattach.c  sbkeysync.c  sbsiglist.c  sbsign.c  sbvarsign.c  sbverify.c  sha256sum.c  sha3-256sum.c  sha3-384sum.c  sha3-512sum.c  sha384sum.c  sha512sum.c
apps/tests/: convert_tester.sh  csr_tester.sh  hasher-test.sh  leancrypto_check_with_ietf.sh  libtest.sh  meson.build  pkcs7_trust_tester.efi  rfc9882_cms_mldsa44.pem  rfc9882_cms_mldsa65.pem  rfc9882_cms_mldsa87.pem  rfc9882_test.sh  sbattach_test.sh  sbsiglist_test.sh  sbsign_test.sh  sbvarsign_test.sh  siggen_tester.sh
asn1/src/: README.md  asn1.h  asn1_ber_bytecode.h  asn1_common.c  asn1_compiler.c  asn1_debug.h  asn1_decoder.c  asn1_decoder.h  asn1_encoder.c  asn1_encoder.h  asn1_encoder_helper.c  asn1_encoder_impl.h  asn1_encoder_small.c  asym_key.c  asym_key.h  asym_key_dilithium.c  asym_key_dilithium.h  asym_key_dilithium_ed25519.c  asym_key_dilithium_ed25519.h  asym_key_dilithium_ed25519_null.c  asym_key_dilithium_ed448.c  asym_key_dilithium_ed448.h  asym_key_dilithium_ed448_null.c  asym_key_dilithium_null.c  asym_key_ed25519.c  asym_key_ed25519.h  asym_key_ed25519_null.c  asym_key_ed448.c  asym_key_ed448.h  asym_key_ed448_null.c  asym_key_sphincs.c  asym_key_sphincs.h  asym_key_sphincs_null.c  asymmetric_type.c  asymmetric_type.h  base64.c  base64.h  build_OID_registry  eddsa_curve_private_key.c  eddsa_curve_private_key_asn1  (+134 more)
asn1/tests/: asn1_eku_enc_tester.c  asn1_enc_tester.c  asn1_extensions_enc_tester.c  asn1_test_helper.c  asn1_test_helper.h  asn1_tester.c  composite_sig_domsep.c  composite_sig_tester.c  gmtime_tester.c  meson.build  pkcs7_trust_malicious1_tester.c  pkcs7_trust_tester.c  x509_decode_encode_tester.c  x509_extensions_test.asn1  x509_extensions_test.asn1.c  x509_extensions_test.asn1.h  x509_extensions_test_asn1  x509_extensions_test_asn1.c  x509_extensions_test_asn1.h  x509_gen_tester.c  x509_siggen_sigver_tester.c
bike/api/: bike_type.h  lc_bike.h  lc_bike_size.h.in  meson.build
bike/src/: bike_api.c  bike_decode.c  bike_decode.h  bike_decode_avx2.c  bike_decode_avx512.c  bike_decode_internal.h  bike_decode_portable.c  bike_gf2x.h  bike_gf2x_internal.h  bike_gf2x_inv.c  bike_gf2x_ksqr_avx2.c  bike_gf2x_ksqr_avx512.c  bike_gf2x_ksqr_portable.c  bike_gf2x_mul.c  bike_gf2x_mul_avx2.c  bike_gf2x_mul_avx512.c  bike_gf2x_mul_base_pclmul.c  bike_gf2x_mul_base_portable.c  bike_gf2x_mul_base_vpclmul.c  bike_gf2x_mul_portable.c  bike_internal.h  bike_kem.c  bike_prf_internal.h  bike_sampling.c  bike_sampling.h  bike_sampling_avx2.c  bike_sampling_avx512.c  bike_sampling_internal.h  bike_sampling_portable.c  bike_utilities.h  compiler_support.c  meson.build  x86_64_intrinsic.h
bike/tests/: bike_kem_official_tester.c  bike_tester.c  bike_tester_perf.c  bike_tester_vectors_l1.h  bike_tester_vectors_l3.h  bike_tester_vectors_l5.h  leancrypto_kernel_bike_5_tester.c  meson.build
curve25519/src/: ed25519.c  ed25519_pct.h  ed25519_ref10.c  ed25519_ref10.h  ed25519_ref10_fe_25_5.h  ed25519_ref10_fe_51.h  meson.build  x25519.c  x25519_scalarmult.c  x25519_scalarmult.h  x25519_scalarmult_c.c  x25519_scalarmult_c.h
curve25519/tests/: ed25519_disabled_tester.c  ed25519_tester.c  meson.build  x25519_avx_tester.c  x25519_c_tester.c  x25519_common_tester.c  x25519_disabled_tester.c  x25519_keygen_tester.c  x25519_tester.c
curve448/src/: arch32_intrinsics.h  constant_time.h  curve448.c  curve448_tables.c  curve448utils.h  ed448.c  ed448_pct.h  f_generic.c  f_impl.c  f_impl.h  field.h  meson.build  point_448.h  scalar.c  word.h  x448.c  x448_scalarmult.c  x448_scalarmult.h  x448_scalarmult_c.c  x448_scalarmult_c.h
curve448/tests/: ed448_disabled_tester.c  ed448_tester.c  (+4 more)
doc/: Doxyfile.in  meson.build
rust/: CHANGELOG.md  CHANGES.md  Cargo.toml  README.md  build.rs  build_simple.rs  build_with_wrap_static_fns.rs  leancrypto-include.h  leancrypto.h
rustls/: Cargo.toml  README.md  build.rs
(+2459 files in other folders)
